site setting UI

--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,9 @@
 <html>
 <body>
     URL Rotation
+    <textarea id="sites" style="width: 640px;height: 480px;"></textarea>
+    <button id="btn">Run</button>
+    <script src="PageDef.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
