change button size

--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-    URL Rotation
+    URL Rotation:<button id="btn"style="height:5em; width:6em;">Run</button><br>
     <textarea id="sites" style="width: 640px;height: 480px;"></textarea>
-    <button id="btn">Run</button>
     <script src="PageDef.js"></script>
     <script src="popup.js"></script>
 </body>
